--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
 		<title>Fight the Stupid</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Actions speak louder."/>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://use.typekit.net/jdz3mnj.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+		<!-- Facebook tags -->
+		<meta property="og:title" content="Fight the Stupid" />
+		<meta property="og:url" content="http://www.fightthestupid.com" />
+		<meta property="og:description" content="Actions speak louder." />
+		<meta property="og:image" content="images/fts-facebook.png" />
+		<meta property="og:type" content="website" />
+
+		<!-- Twitter tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@chrisbup">
+		<meta name="twitter:creator" content="@chrisbup">
+		<meta name="twitter:title" content="Fight the Stupid" />
+		<meta name="twitter:url" content="http://www.fightthestupid.com" />
+		<meta name="twitter:card" content="Actions speak louder." />
+		<meta name="twitter:image" content="images/fts-twitter.png" />
+
 	</head>
 	<body>
 
@@ -47,11 +65,21 @@
 		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+    <!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-53787405-3', 'auto');
+		  ga('send', 'pageview');
+		</script>
 
 	</body>
 </html>
