tweak social media

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 		<meta property="og:image" content="images/fts-facebook.png" />
 		<meta property="og:type" content="website" />
 
-		<!-- Twitter tags -->
+		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@chrisbup">
 		<meta name="twitter:creator" content="@chrisbup">
-		<meta name="twitter:title" content="Fight the Stupid" />
-		<meta name="twitter:url" content="http://www.fightthestupid.com" />
-		<meta name="twitter:card" content="Actions speak louder." />
-		<meta name="twitter:image" content="images/fts-twitter.png" />
+		<meta name="twitter:url" content="http://www.fightthestupid.com">
+		<meta name="twitter:image" content="http://www.fightthestupid.com/images/fts-twitter.png">
+		<meta name="twitter:title" content="Fight the Stupid">
+		<meta name="twitter:description" content="Actions speak louder." />
 
 	</head>
 	<body>
@@ -32,7 +32,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<img src="images/fight-the-stupid-header-white.png" alt="" data-position="75% center" />
+				<img class="header-pic"src="images/fight-the-stupid-header-white.png" alt="Fight the Stupid" data-position="75% center" />
 				<h2>Actions Speak Louder.</h2>
 			</div>
 		</section>
@@ -41,7 +41,7 @@
 		<article id="one" class="post style1 alt">
 			<div class="image">
 			  <h2 class="highlight quotemark"><mark><a href="#" id="quote">Starter quote.</a></mark></h2>
-				<img src="images/trump.jpg" alt="" data-position="75% center" />
+				<img src="images/trump.jpg" alt="Donald Trump" data-position="75% center" />
 			</div>
 			<div class="content">
 				<div class="inner">
@@ -60,7 +60,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="copyright">
-				<p>Made with hope by <a href="http://www.chrisheuberger.com">Chris Heuberger</a>.</p>
+				<p><small>Made with hope by <a href="http://www.chrisheuberger.com">Chris Heuberger</a>.</small></p>
 			</div>
 		</footer>
 
