--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:title" content="Fight the Stupid" />
 		<meta property="og:url" content="http://www.fightthestupid.com" />
 		<meta property="og:description" content="Actions speak louder." />
-		<meta property="og:image" content="images/fts-facebook.png" />
+		<meta property="og:image" content="images/fts-facebook-2.png" />
 		<meta property="og:type" content="website" />
 
 		<!-- Twitter Card -->
@@ -22,7 +22,7 @@
 		<meta name="twitter:site" content="@chrisbup">
 		<meta name="twitter:creator" content="@chrisbup">
 		<meta name="twitter:url" content="http://www.fightthestupid.com">
-		<meta name="twitter:image" content="http://www.fightthestupid.com/images/fts-twitter.png">
+		<meta name="twitter:image" content="http://www.fightthestupid.com/images/fts-twitter-2.png">
 		<meta name="twitter:title" content="Fight the Stupid">
 		<meta name="twitter:description" content="Actions speak louder." />
 
@@ -32,7 +32,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<img class="header-pic"src="images/fight-the-stupid-header-white.png" alt="Fight the Stupid" data-position="75% center" />
+				<img class="header-pic" src="images/fight-the-stupid-header-white.png" alt="Fight the Stupid" data-position="75% center" />
 				<h2>Actions Speak Louder.</h2>
 			</div>
 		</section>
@@ -40,14 +40,14 @@
 		<!-- One -->
 		<article id="one" class="post style1 alt">
 			<div class="image">
-			  <h2 class="highlight quotemark"><mark><a href="#" id="quote">Starter quote.</a></mark></h2>
+			  <h2 class="highlight quotemark"><mark><a href="" id="quote"></a></mark></h2>
 				<img src="images/trump.jpg" alt="Donald Trump" data-position="75% center" />
 			</div>
 			<div class="content">
 				<div class="inner">
 					<header>
-						<h2><a href="#" id="org">Starter Org</a></h2>
-						<p id="desc">Starter description</p>
+						<h2><a href="" id="org"></a></h2>
+						<p id="desc"></p>
 					</header>
 				</div>
 			</div>
