typo, target blank

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		<!-- One -->
 		<article id="one" class="post style1 alt">
 			<div class="image">
-			  <h2 class="highlight quotemark"><mark><a href="" id="quote"></a></mark></h2>
+			  <h2 class="highlight quotemark"><mark><a href="" id="quote" target="_blank"></a></mark></h2>
 				<img src="images/trump.jpg" alt="Donald Trump" data-position="75% center" />
 			</div>
 			<div class="content">
 				<div class="inner">
 					<header>
-						<h2><a href="" id="org"></a></h2>
+						<h2><a href="" id="org" target="_blank"></a></h2>
 						<p id="desc"></p>
 					</header>
 				</div>
@@ -60,7 +60,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="copyright">
-				<p><small>Made with hope by <a href="http://www.chrisheuberger.com">Chris Heuberger</a>.</small></p>
+				<p><small>Made with hope by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a>.</small></p>
 			</div>
 		</footer>
 
