--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 
 		<!-- Footer -->
 		<footer id="footer">
+
+			<!-- Go to www.addthis.com/dashboard to customize your tools -->
+			<div class="addthis_inline_share_toolbox"></div>
+
 			<div class="copyright">
 				<p><small>Made with hope by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a>.</small></p>
 			</div>
@@ -70,6 +74,9 @@
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+
+	  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+	  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-582b7badf77c7179"></script> 
 
     <!-- Google Analytics -->
 		<script>
