--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="addthis_inline_share_toolbox"></div>
       <br>
 			<div class="copyright">
-				<p><small>Made with hope by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a>.</small></p>
+				<p><small>Made with hope by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a>. Note: this site only includes quotes from before the election of 2016. I simply can't keep up.</small></p>
 			</div>
 		</footer>
 
