update Typekit fonts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Actions speak louder."/>
-		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
+
+		<link rel="stylesheet" href="https://use.typekit.net/mey4tar.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://use.typekit.net/jdz3mnj.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<!-- Facebook tags -->
 		<meta property="og:title" content="Fight the Stupid" />
